--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,6 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: 'Bellota Text', cursive;
+font-family: 'Roboto Flex', sans-serif;
 }
