--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 .container {
   max-width: 1000px;
   margin: auto;
-  height: 1300px;
+  height: 1450px;
   max-height: 90%;
 
 }
@@ -53,6 +53,7 @@
   background:rgb(230, 233, 237);
   border-radius: 20px;
   opacity: 0.9;
+  padding: 5px;
 }
 
 .clinics p{
@@ -74,6 +75,10 @@
 .aboutMe{
   margin : 20px auto 0 auto;
   max-width: 70%;
+  background:rgb(230, 233, 237);
+  border-radius: 20px;
+  padding: 5px;
+  opacity: 0.9;
 }
 .aboutMe h2{
   padding: 0;
@@ -207,16 +212,40 @@ button {
   height: 10%;
 }
 
-
-@media screen and (max-width: 875px) {
-  .container{
+@media screen and (max-width: 830px) {
+  .both{
+    background-color: rgb(202,216,209);
+  }
+  .container {
     height: 1600px;
   }
 }
 
-@media screen and (max-width: 580px) {
-  .container{
-    height: 2300px;
+@media screen and (max-width: 630px) {
+  .both{
+    background-color: rgb(202,216,209);
+  }
+  .container {
+    height: 1800px;
   }
 }
+
+@media screen and (max-width: 510px) {
+  .both{
+    background-color: rgb(202,216,209);
+  }
+  .container {
+    height: 2000px;
+  }
+}
+@media screen and (max-width: 435px) {
+  .both{
+    background-color: rgb(202,216,209);
+  }
+  .container {
+    height: 2400px;
+  }
+}
+
+
 
