--- a/src/App.css
+++ b/src/App.css
@@ -210,6 +210,7 @@ button {
   font-size: 14px;
   color:#5c6356;
   height: 10%;
+  padding-bottom: 10px;
 }
 
 @media screen and (max-width: 830px) {
@@ -243,7 +244,7 @@ button {
     background-color: rgb(202,216,209);
   }
   .container {
-    height: 2400px;
+    height: 2600px;
   }
 }
 
